# atlas-morning-briefing

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
examples/: sample-briefing.md
references/: config_guide.md  kindle_setup.md
scripts/: __init__.py  arxiv_scanner.py  bedrock_client.py  blog_scanner.py  briefing_runner.py  config_validator.py  email_distributor.py  intelligence.py  news_aggregator.py  paper_scorer.py  pdf_generator.py  stock_fetcher.py
tests/: test_arxiv_scanner.py  test_briefing_runner.py  test_config_validator.py  test_dedup_papers.py  test_intelligence.py  test_paper_scorer.py  test_pdf_generator.py
