[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-morning-briefing"
version = "0.1.0"
description = "AI-powered morning briefing pipeline with Amazon Bedrock integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Junjie Tang"},
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "feedparser>=6.0.10",
    "reportlab>=4.0.0",
    "scikit-learn>=1.3.0",
    "boto3>=1.34.0",
    "markdown>=3.5.0",
    "nh3>=0.2.14",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
morning-briefing = "scripts.briefing_runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["scripts*"]
