[tool.poetry]
name = "atlas-morning-briefing"
version = "0.1.0"
description = "AI-powered morning briefing pipeline with Amazon Bedrock integration"
readme = "README.md"
license = "MIT"
authors = ["Junjie Tang"]
packages = [{include = "scripts"}]

[tool.poetry.scripts]
morning-briefing = "scripts.briefing_runner:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = ">=2.31.0"
PyYAML = ">=6.0.1"
feedparser = ">=6.0.10"
reportlab = ">=4.0.0"
markdown = ">=3.5.0"
scikit-learn = ">=1.3.0"
boto3 = ">=1.34.0"
nh3 = ">=0.2.14"
defusedxml = ">=0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]